# chipcap

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  render.yaml
chiptap-contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
chiptap-indexer/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
chiptap-nft-metadata/: IPFS-GUIDE.md  package.json
chiptap-pvp-frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
chiptap-solana-frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
chiptap-solana-indexer/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
chiptap-solana-programs/: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md  SQUADS_SETUP.md  SWITCHBOARD.md  airdrop-devnet.sh  airdrop.sh  attack-smoke.js  br-smoke.js  build-direct.sh  build-idl-nightly.sh  build.sh  cancel-refund-smoke.js  check-toolchain.sh  copy-idls.sh  debug-battle-txs.cjs  debug-tx-ix.cjs  deploy-chip-nft-devnet.sh  deploy.sh  devnet-smoke-no-vrf.js  devnet-smoke.js  diag.sh  export-key.js  fill-br.js  fill-tournament.js  fulfill-vrf.js  gen-cold-keypair.sh  gen-idls.js  gen-program-keys.sh  init-chip-nft-devnet.js  init-programs.js  init-ticket-mint.js  install-anchor.sh  install-solana.sh  kick-battle.js  kick-tournament.js  package.json  probe-asset.js  (+21 more)
chiptap-solana-programs/programs/battle-arena/: Cargo.toml
chiptap-solana-programs/programs/battle-arena/src/: lib.rs
chiptap-solana-programs/programs/chip-nft/: Cargo.toml
chiptap-solana-programs/programs/chip-nft/src/: lib.rs
chiptap-solana-programs/programs/treasury/: Cargo.toml
chiptap-solana-programs/programs/treasury/src/: lib.rs
chiptap-solana-relayer/: .env.example  Dockerfile  (+5 more)
(+157 files in other folders)
