[package]
name    = "battle-arena"
version = "0.1.0"
edition = "2021"
description = "ChipTap PvP — 1v1 NFT battle program with internal SOL ledger"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1" }   # SEC-23 tournaments — SPL ticket mint + burn CPIs
mpl-core    = { version = "0.7.2", features = ["anchor"] }
chip-nft    = { path = "../chip-nft", features = ["cpi"] }
treasury    = { path = "../treasury", features = ["cpi"] }

[build-dependencies]
proc-macro2 = "=1.0.86"
