[package]
name    = "chip-nft"
version = "0.1.0"
edition = "2021"
description = "ChipTap PvP — mints chip NFTs as Metaplex Core Assets"

[lib]
crate-type = ["cdylib", "lib"]
name = "chip_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
mpl-core    = { version = "0.7.2", features = ["anchor"] }

[build-dependencies]
proc-macro2 = "=1.0.86"
