[package]
name    = "treasury"
version = "0.1.0"
edition = "2021"
description = "ChipTap PvP — collects 5% platform fees from BattleArena"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

[build-dependencies]
proc-macro2 = "=1.0.86"
